--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,3 +1,4 @@
 RA: <2218106054>
 Nome do Aluno: <Filipe Gomes Domingues>
+Email: <filipe.gomes.domingues@uni9.edu.br>
 Data de Nascimento: <Data de Nascimento do aluno>
